tests/parser/positive/if_else.nv
fn main() : void {
    if (x > 0) {
        return;
    } else {
        return;
    }
}
