tests/parser/negative/missing_rparen.nv
fn main() : void {
    if (x > 0 {
        return;
    }
}
